css/main.css
body {
  background: #222222;
  color: #cccccc;
  font-family: "Share Tech Mono", monospace;
  font-size: 18pt;
  font-weight: 400;
  font-style: normal;
}

#terminal {
  background: black;
  color: #00ff66;
  position: absolute;
  top: 0px; right: 0px; bottom: 0px; left: 0px;
  overflow-y: scroll;
  padding: 10px;
  line-height: 1.2;
  filter: blur(0.5pt);
}

.cursor {
  animation: blinker 1s linear infinite;
}

@keyframes blinker {
  50% {
    opacity: 0;
  }
}

#screen {
  width: 100%;
  height: 100%;
  position: fixed;
  top: 0;
  left: 0;
  pointer-events: none;
}

